better logo and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="thanks_all">Thanks to all the supporters</string>
     <string name="action_settings">Settings</string>
     <string name="button_see_donors">See donors list</string>
-    <string name="button_donate_more">Donate more</string>
+    <string name="button_donate_more">Donate</string>
     <string name="button_contact_us">Contact us</string>
 </resources>
