--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="thanks_all">Thank you for supporting QField</string>
     <string name="action_settings">Settings</string>
     <string name="button_install_qfield">Install QField</string>
-    <string name="button_see_donors">See donors list</string>
+    <string name="button_see_donors">See donors list (contact us to be added)</string>
     <string name="button_donate_more">Donate</string>
     <string name="button_contact_us">Contact us</string>
     <string name="opengis_logo">OPENGIS.ch logo</string>
